# lazIR_tag

./: .gitignore  CMakeLists.txt  README.md  TASKS.md  go.mod  go.sum
config/: config_bootstrap.yaml  config_node.yaml  config_node10.yaml  config_node2.yaml  config_node3.yaml  config_node4.yaml  config_node5.yaml  config_node6.yaml  config_node7.yaml  config_node8.yaml  config_node9.yaml
script/: .plot2.py.swp  client_compile.sh  plot.py  plot2.py  proto_compile.sh  reelection_trigger.py  run_experiments.py  run_experiments_pi.py  simulate.sh  start_raft_cluster.py
script/sim_results/: node_failure=False.csv  node_failure=True.csv
signal/: Makefile
signal/include/: gpio.h  timer.h
signal/src/: gpio.c  main.c  timer.c
src/: Makefile  signal.c
src/client/: client.go  client.h  go.mod  go.sum  test_signal.c  test_signal.h
src/cmd/: client.go  go.sum
src/cmd/client_shooter_dead/: client.go
src/cmd/client_simple/: client.go  go.mod
src/cmd/client_target_dead/: client.go
src/frontend/: .gui2.py.swp  alive.py  alive_gui.py  frontend.go  frontend.sh  gui.py  gui2.py
src/proto/: go.mod  service.pb.go  service.proto  service_grpc.pb.go  transport.grpc.pb.cc  transport.grpc.pb.h  transport.pb.cc  transport.pb.go  transport.pb.h  transport.proto  transport_grpc.pb.go
src/proto_c/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/raft_grpc/: application.go  go.mod  go.sum  main.go  node_name1.out  node_name10.out  node_name11.out  node_name2.out  node_name4.out  node_name5.out  node_name6.out  node_name7.out  node_name8.out  node_name9.out  util.go
src/sim/: sim.go
